<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_main_blue"
    android:orientation="vertical"
    tools:context=".fragment.seller.SellerOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:elevation="2dp"
        android:background="@drawable/back_toolbar_white">

        <ImageView
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_title"
                style="@style/lbl.black"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/order_inactive_title" />

            <TextView
                android:id="@+id/lbl_sub_title"
                style="@style/lbl.black"
                android:layout_marginTop="4dp"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/order_seller_inactive_sub_title" />
        </LinearLayout>

        <ImageView
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="16dp"
            android:layout_height="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llt_inactvie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="97dp"
            style="@style/lbl.white"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/seller_order_inactive_content" />

        <TextView
            style="@style/lbl.white"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="14dp"
            android:background="@drawable/back_black_border_15_23"
            android:textSize="18sp"
            android:text="@string/seller_order_inactive_detail"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lst_order"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"/>

</LinearLayout>