<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.placespicker.PlacesPickerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:elevation="2dp"
        android:background="@drawable/back_toolbar_white">

        <ImageView
            android:id="@+id/img_back"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            style="@style/lbl.black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/choose_location_title" />

        <ImageView
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="16dp"
            android:layout_height="16dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llt_toolbar"
            style="@style/llt_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    style="@style/lbl.black"
                    android:textColor="@color/colorGray"
                    android:text="@string/register_sub_title"/>

                <TextView
                    style="@style/lbl.black"
                    android:textColor="@color/colorGray"
                    android:textStyle="bold"
                    android:text="@string/register_title"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/llt_toolbar">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".MapsActivity" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/places_bottomsheet" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:layout_anchor="@id/bottom_sheet"
            app:layout_anchorGravity="right"
            android:id="@+id/get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.361"
            app:srcCompat="@drawable/ic_my_location"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>